@@ -4,6 +4,7 @@ Portfolio Press 0.7.3
 - Minor style updates as recommended by WordPress Theme Team
 - Chinese translations by Sunny Lau
 - Updated Spanish Translations from Eduardo Larequi
+- Changed "current_page_parent" to "current_menu_parent" in css
 
 Portfolio Press 0.7.2
 
